# rv1126b_rkipc

./: CMakeLists.txt
common/: version.h
common/venc/: venc.c
docs/: Rockchip_Developer_Guide_Linux_RKIPC_CN.md
lib/arm-rockchip1240-linux-gnueabihf/opencv-mobile/lib/cmake/opencv4/: OpenCVModules.cmake
src/rv1126b_dv/: CMakeLists.txt  RkLunch-buildroot.sh
src/rv1126b_dv/ui/: ui_auto_test.c  ui_resource_manager.c
src/rv1126b_dv/video/: video.c  video.h
src/rv1126b_ipc/: CMakeLists.txt  RkLunch.sh  main.cc  rkipc-2688x1520-buildroot.ini  rkipc-2688x1520.ini  rkipc-3200x1800.ini  rkipc-3840x2160.ini
src/rv1126b_ipc/lora/: SerialPort.h  lora.cc  lora.h
src/rv1126b_ipc/video/: video.c  video.cc  video.h
src/rv1126b_ipc/yolo26/draw/: cv_draw.cpp  cv_draw.hpp
src/rv1126b_ipc/yolo26/engine/: ThreadPool.hpp  coreNum.hpp  engine.hpp  rknnPool.hpp  rknn_engine.cpp  rknn_engine.hpp
src/rv1126b_ipc/yolo26/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
src/rv1126b_ipc/yolo26/task/: yolo26.cpp  yolo26.h
